add detail gsp and styles

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -26,3 +26,32 @@
 
 
 /*custom css*/
+body{
+    margin-left: 5%;
+    margin-right: 5%;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+/*header and footer*/
+div.headerline {
+    .gradient(top, #213862, #48627a);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+div.footerline {
+    .gradient(bottom, #213862, #48627a);
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.navnavbar-fixed-top{
+    clear: both;
+    right: 0;
+    left: 0;
+}
+
+.spacer{
+        width: 100%;
+        height: 45px;
+}
