add header and footer lines

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -34,15 +34,27 @@ body{
 
 /*header and footer*/
 div.headerline {
-    .gradient(top, #213862, #48627a);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    .gradient(top, #154064, #002143);
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 div.footerline {
-    .gradient(bottom, #213862, #48627a);
-    padding-top: 15px;
-    padding-bottom: 15px;
+    .gradient(bottom, #002143, #154064);
+    padding-top: 6px;
+    padding-bottom: 2px;
+
+    p{
+    font-size: 10px;
+    color: rgb(202, 201, 201);
+    text-align: center;
+    }
+}
+
+div.footerlightblue{
+    padding-top: 3px;
+    padding-bottom: 3px;
+    background-color:#c4dcf4;
 }
 
 .navnavbar-fixed-top{
