--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -14,3 +14,12 @@
 .logo{
     height:50px;
     }
+
+.select2-container .select2-selection--single 
+	{
+    height: 34px;
+	}
+.headerText
+	{
+	color: red;
+	}
