restyle the detail page to match mockups

--- a/web-app/less/bootstrap/variables.less
+++ b/web-app/less/bootstrap/variables.less
@@ -2,6 +2,12 @@
 // Variables
 // --------------------------------------------------
 
+//Custom variables
+@light-blue: #c4dcf4;
+@dark-blue: #154064;
+@darker-blue: #002143;
+@red: #b81e30;
+
 
 // Global values
 // --------------------------------------------------
@@ -67,7 +73,7 @@
 // Iconography
 // -------------------------
 
-@icon-font-path:          "../fonts/";
+@icon-font-path:          "";
 @icon-font-name:          "glyphicons-halflings-regular";
 
 
