--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -25,7 +25,12 @@
 }
 
 /*Cutom Font*/
-@font-face { font-family: Nexa; src: url('Nexa-Bold.otf'); }
+@font-face { font-family: Nexa; 
+            src: url('Nexa-Bold.otf'); 
+            src: url('glyphicons-halflings-regular.eot');
+            src: url('glyphicons-halflings-regular.ttf');
+            src: url('glyphicons-halflings-regular.woff');
+        }
 
 
 /*Custom css*/
@@ -34,11 +39,26 @@ body{
     margin-right: 5%;
     font-family: 'Helvetica', 'Arial', sans-serif;
     
-    h1, h2, h3 {
+    h1, h2, h3, h4{
         font-family: 'Nexa' , 'Helvetica', 'Arial', sans-serif;
     }
 
+    /*headers */
 
+    h1{
+        color: #b81e30;
+        font-size: 30px;
+        margin-bottom: 15px;
+    }
+
+    h3{
+        color: #154064;
+        font-size: 16px;
+        .gradient(left, #c4dcf4, #ffffff);
+        padding-top:3px;
+        padding-bottom:3px;
+        width: 50%;
+    }
 }
 
 /*Header and footer*/
@@ -60,6 +80,19 @@ div.footerline {
     }
 }
 
+a.search-btn{
+    color:white;
+    height: 30px;
+}
+
+.search-btn{
+    background-color: lightgrey;
+}
+
+.tip{
+    color: grey;
+}
+
 div.footerlightblue{
     padding-top: 3px;
     padding-bottom: 3px;
@@ -75,4 +108,11 @@ div.footerlightblue{
 .spacer{
         width: 100%;
         height: 45px;
+}
+
+.search-text{
+    color: #b81e30;
+    font-size: 11px;
+    font-weight: bold;
+    font-family: 'Nexa' , 'Helvetica', 'Arial', sans-serif;
 }
