--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -7,10 +7,71 @@
     margin-top: 40px;
 }
 
-.first-row{
-	margin-top: 30px;
-}
-
 .logo{
     height:50px;
     }
+
+/*product info*/
+.prod-info{
+	font-size: 14px;
+}
+
+.info{
+	color: #154064;
+	font-weight: bold;
+	margin-right: 8px;
+	}
+
+/* side effects */
+#adverse-events{
+	ul{
+		width: 50%; 
+		margin-left: 0px;
+	}
+
+	li{
+		display: inline;
+	}
+
+	li:not(:first-child){
+		margin-right:1em;
+		}
+
+	li:first-child{
+		margin-right:0.5em;
+		margin-left: 0px;
+	}
+
+	li:before {
+		 content:'\2022';
+		}
+}
+
+.recall-div{
+	margin-top: 20px;
+	width:400px;
+}
+
+.recall-head{
+		color: white;
+  		text-align: center;
+  		width: 400px;
+		height: 30px;
+		background-color: #154064;
+		padding-top: 8px;
+	}
+
+.recalls{
+	border-radius: 0;
+	height:auto;
+    max-height:150%;
+    overflow:auto;
+}
+
+
+
+/*Nav toggle*/
+.nav-tabs {
+  border-bottom: 8px solid #002143;
+}
+
