hook up the top 5 side effects

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -41,6 +41,7 @@ body{
     
     h1, h2, h3, h4{
         font-family: 'Nexa' , 'Helvetica', 'Arial', sans-serif;
+
     }
 
     /*headers */
@@ -49,6 +50,7 @@ body{
         color: #b81e30;
         font-size: 30px;
         margin-bottom: 15px;
+        word-spacing: -20px
     }
 
     h3{
@@ -58,6 +60,11 @@ body{
         padding-top:3px;
         padding-bottom:3px;
         width: 50%;
+        word-spacing: -10px;
+    }
+
+    h4{
+        word-spacing:-10px;
     }
 }
 
@@ -115,4 +122,24 @@ div.footerlightblue{
     font-size: 11px;
     font-weight: bold;
     font-family: 'Nexa' , 'Helvetica', 'Arial', sans-serif;
+}
+
+
+/*Modals*/
+
+.modal-header{
+    background-color: #154064;
+    color: white;
+}
+
+  .modal-body{
+        max-height: 420px;
+        overflow-y: auto;
+    }
+
+.modal-ul{
+
+    li{
+        list-style: none;
+    }
 }
