--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -86,7 +86,11 @@ span.bullet{
 	{
     height: 34px;
 	}
+
 .headerText
 	{
-	color: red;
+	margin: 0px;
+	color: #b81e30;
+	font-size: 12px;
+	font-weight: bold;
 	}
