Add registration form popup to front page

--- a/web-app/less/frontPage.less
+++ b/web-app/less/frontPage.less
@@ -35,3 +35,23 @@
 	{
 	margin-left: 15%;
 	}
+.select2-container .select2-selection--single 
+	{
+    height: 34px;
+	}
+.modal-dialog 
+	{
+    width: 350px;
+	}
+#regError
+	{
+	color: red;
+	}
+#regSuccess
+	{
+	color: green;
+	}
+.s2ui_error
+	{
+	color:red;
+	}
