clean up the front page css and make it more responsive

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -140,3 +140,12 @@ div.footerlightblue{
         list-style: none;
     }
 }
+
+/*search bar */
+.headerText
+    {
+    margin: 0px;
+    color: #b81e30;
+    font-size: 12px;
+    font-weight: bold;
+    }
