--- a/web-app/less/frontPage.less
+++ b/web-app/less/frontPage.less
@@ -6,6 +6,9 @@
 	{
 	margin-top: 20%;
 	}
+.searchInput{
+	width:80%;
+}
 .descriptionText
 	{
 	color: grey;
@@ -25,16 +28,16 @@
 	}
 .right-searchpane
 	{
-	margin-right: 15%;
-	padding-left: 5%;
+	/*margin-right: 15%;
+	padding-left: 5%;*/
 	border-left-style: solid;
 	border-left-color: grey;
 	border-left-width: 1px;
 	}
-.left-searchpane
+/*.left-searchpane
 	{
 	margin-left: 15%;
-	}
+	}*/
 .select2-container .select2-selection--single 
 	{
     height: 34px;
