restyle the search button

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -87,10 +87,11 @@ div.footerline {
     }
 }
 
-.search-btn{
-    background-color: lightgrey;
-    color:white;
-    height: 30px;
+.btn-search{
+    background-color: rgba(128, 128, 128, 0.78);
+    color: white;
+    margin-left: 4px !important;
+    border-radius: 9px !important;
 }
 
 .tip{
