add better responsive styling to who we are box

--- a/web-app/less/frontPage.less
+++ b/web-app/less/frontPage.less
@@ -26,18 +26,28 @@
 	{
 	margin-left: 25%;
 	}
-.right-searchpane
+
+.right-searchpane-md-lg
 	{
-	/*margin-right: 15%;
-	padding-left: 5%;*/
 	border-left-style: solid;
 	border-left-color: grey;
 	border-left-width: 1px;
 	}
-/*.left-searchpane
+.right-searchpane-sm
 	{
-	margin-left: 15%;
-	}*/
+	border-left-style: solid;
+	border-left-color: grey;
+	border-left-width: 1px;
+	}
+.right-searchpane-xs
+	{
+	margin-top: 5%;
+	padding-top: 5%;
+	border-top-style: solid;
+	border-top-color: grey;
+	border-top-width: 1px;
+	}
+
 .select2-container .select2-selection--single 
 	{
     height: 34px;
