restyle the add products button

--- a/grails-app/assets/stylesheets/frontPage.css
+++ b/grails-app/assets/stylesheets/frontPage.css
@@ -1,37 +1,1 @@
-.logo {
-  height: 100px;
-}
-.searchBar {
-  margin-top: 20%;
-}
-.searchInput {
-  width: 80%;
-}
-.descriptionText {
-  color: grey;
-  font-size: 12px;
-}
-.headerText {
-  color: red;
-}
-.login {
-  width: 20%;
-}
-.login-button {
-  margin-left: 25%;
-}
-.right-searchpane {
-  /*margin-right: 15%;
-	padding-left: 5%;*/
-
-  border-left-style: solid;
-  border-left-color: grey;
-  border-left-width: 1px;
-}
-/*.left-searchpane
-	{
-	margin-left: 15%;
-	}*/
-.select2-container .select2-selection--single {
-  height: 34px;
-}
+.logo{height:100px}.searchBar{margin-top:20%}.searchInput{width:80%}.descriptionText{color:grey;font-size:12px}.headerText{color:red}.login{width:20%}.login-button{margin-left:25%}.right-searchpane{border-left-style:solid;border-left-color:grey;border-left-width:1px}.select2-container .select2-selection--single{height:34px}.modal-dialog{width:350px}#regError{color:red}#regSuccess{color:green}.s2ui_error{color:red}
