--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -3,8 +3,18 @@
 	height: 60vh;
 }
 
+.add-product{
+	color: grey;
+	font-size: 10px;
+}
+
+.inline{
+	display: inline;
+}
+
 .main-header{
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 
 .first-row{
