Move login to top bar -- Move register modal to main.gsp

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -71,8 +71,8 @@ body{
 /*Header and footer*/
 div.headerline {
     .gradient(top, #154064, #002143);
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 div.footerline {
@@ -130,9 +130,10 @@ div.footerlightblue{
     color: white;
 }
 
-  .modal-body{
-        max-height: 420px;
-        overflow-y: auto;
+.modal-body
+    {
+    max-height: 420px;
+    overflow-y: auto;
     }
 
 .modal-ul{
@@ -149,4 +150,30 @@ div.footerlightblue{
     color: #b81e30;
     font-size: 12px;
     font-weight: bold;
+    }
+
+/*Login In Top Bar*/
+.login
+    {
+    display: inline;
+    padding-right: 25px;
+    padding-left: 25px;
+    }
+.login-button
+    {
+    padding: 3px 8px;
+    font-style: Nexa Bold;
+    color: white;
+    background-color: #818285;
+    }
+.createAccount-button
+    {
+    font-style: Nexa Bold;
+    color: white;
+    background-color: #818285;
+    }
+.createAccount-link
+    {
+    font-style: Nexa Bold;
+    color: #a1a1a1;
     }
