add the description and show hide jquery for the details page

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -98,6 +98,15 @@ div.footerline {
     color: grey;
 }
 
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus{
+    color: white;
+    background-color: #154064;
+    border: 1px solid #ddd;
+    border-bottom-color: transparent;
+    cursor: default;
+    font-weight: bold;
+}
+
 div.footerlightblue{
     padding-top: 3px;
     padding-bottom: 3px;
