--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -1,8 +1,5 @@
-.enforment-reports{
-	margin: 20px;
-	height: 60vh;
-}
 
+/*Logo and header*/
 .add-product{
 	color: grey;
 	font-size: 10px;
@@ -13,17 +10,37 @@
 }
 
 .main-header{
-    margin-top: 30px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .first-row{
-	margin-top: 30px;
+	margin-top: 20px;
 }
 
 .logo{
     height:50px;
     }
+
+/*recent recall side bar */
+.enforment-reports{
+	margin: 20px;
+	height: 60vh;
+}
+
+.recall-div{
+	margin-top: 20px;
+	width:400px;
+}
+
+.recall-head{
+		color: white;
+  		text-align: center;
+  		width: 400px;
+		height: 30px;
+		background-color: #154064;
+		padding-top: 8px;
+	}
 
 /*product info*/
 .prod-info{
@@ -63,20 +80,6 @@
 	}
 }
 
-.recall-div{
-	margin-top: 20px;
-	width:400px;
-}
-
-.recall-head{
-		color: white;
-  		text-align: center;
-  		width: 400px;
-		height: 30px;
-		background-color: #154064;
-		padding-top: 8px;
-	}
-
 span.bullet{
 	font-size: 10px;
   	color: #b81e30;
@@ -87,6 +90,20 @@ span.bullet{
 	height:auto;
     max-height:150%;
     overflow:auto;
+}
+
+
+/*show and hide in description*/
+.hide{
+    display:none;
+}
+
+.more{
+    background:lightblue;
+    color:navy;
+    font-size:13px;
+    padding:3px;
+    cursor:pointer;
 }
 
 
