--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -131,6 +131,15 @@ div.footerlightblue{
     font-family: 'Nexa' , 'Helvetica', 'Arial', sans-serif;
 }
 
+.user-text{
+    color: white;
+}
+
+.logout{
+    padding: 2px;
+    margin-left: 8px;
+}
+
 
 /*Modals*/
 
