Add css to warnings

--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -106,7 +106,12 @@ span.bullet{
     cursor:pointer;
 }
 
-
+/*Warnings Section*/
+.warnings
+	{
+	overflow-y: auto;
+	height: 60px;
+	}
 
 /*Nav toggle*/
 .nav-tabs {
