add styles for the add products modal

--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -99,11 +99,20 @@ span.bullet{
 }
 
 .more{
-    background:lightblue;
-    color:navy;
     font-size:13px;
     padding:3px;
     cursor:pointer;
+}
+
+
+/*add product modal*/
+.form-btns{
+	float:right;
+}
+
+.errors{
+	color:#b81e30;
+	font-style: italic;
 }
 
 
