--- a/web-app/less/detail.less
+++ b/web-app/less/detail.less
@@ -104,11 +104,17 @@ span.bullet{
     cursor:pointer;
 }
 
+/*add product modal*/
+.form-btns{
+	float:right;
+}
+
 /*Warnings Section*/
 .warnings
 	{
 	overflow-y: auto;
 	height: 60px;
+	margin-bottom: 20px;
 	}
 
 /*Nav toggle*/
