style the modal on dashboard

--- a/web-app/less/custom.less
+++ b/web-app/less/custom.less
@@ -103,6 +103,12 @@ div.footerline {
     color: grey;
 }
 
+.info{
+    color: #154064;
+    font-weight: bold;
+    margin-right: 8px;
+    }
+
 .nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus{
     color: white;
     border: 1px solid #ddd;
