CSS UI TWEAKS AND SUCH

--- a/web-app/css/select2.css
+++ b/web-app/css/select2.css
@@ -128,7 +128,7 @@
   border-radius: 4px; }
   .select2-container--default .select2-selection--single .select2-selection__rendered {
     color: #444;
-    line-height: 28px; }
+    line-height: 33px; }
   .select2-container--default .select2-selection--single .select2-selection__clear {
     cursor: pointer;
     float: right;
@@ -260,8 +260,7 @@
             margin-left: -5em;
             padding-left: 6em; }
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-  background-color: #5897fb;
-  color: white; }
+  background-color: #eaf0f7; }
 .select2-container--default .select2-results__group {
   cursor: default;
   display: block;
