--- a/web-app/less/frontPage.less
+++ b/web-app/less/frontPage.less
@@ -13,10 +13,13 @@
 	{
 	color: grey;
 	font-size: 12px;
+	margin-bottom: 18px;
+	margin-top: 10px;
 	}
 .headerText
 	{
 	color: red;
+	font-size: 15px;
 	}
 
 .right-searchpane-md-lg
@@ -39,7 +42,11 @@
 	border-top-color: grey;
 	border-top-width: 1px;
 	}
-
+.select2-container 
+	{
+	margin-bottom: 10px;
+	margin-top: 10px;
+	}
 .select2-container .select2-selection--single 
 	{
     height: 34px;
