--- a/grails-app/assets/stylesheets/detail.css
+++ b/grails-app/assets/stylesheets/detail.css
@@ -1,155 +1,1 @@
-/*Logo and header*/
-.add-product {
-  color: grey;
-  font-size: 14px;
-}
-.inline {
-  display: inline;
-}
-.main-header {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
-.first-row {
-  margin-top: 20px;
-}
-.logo {
-  height: 75px;
-}
-/*recent recall side bar */
-.recalls {
-  border-radius: 0;
-  min-height: 400px;
-  border: 1px solid lightgrey;
-  height: auto;
-  max-height: 100%;
-  overflow-y: scroll;
-  width: 100%;
-  padding: 0px;
-}
-.enforment-reports {
-  margin: 20px;
-  height: 60vh;
-}
-.recall-div {
-  margin-top: 20px;
-  max-height: 500px;
-}
-.recall-head {
-  color: white;
-  text-align: center;
-  width: 100%;
-  height: 30px;
-  background-color: #154064;
-  background-image: -webkit-linear-gradient(top, #154064, #002143);
-  background-image: -moz-linear-gradient(top, #154064, #002143);
-  background-image: -o-linear-gradient(top, #154064, #002143);
-  background-image: -ms-linear-gradient(top, #154064, #002143);
-  background-image: linear-gradient(top, #154064, #002143);
-  padding-top: 6px;
-  padding-bottom: 25px;
-  font-size: 15px;
-}
-.reason:nth-child(odd) {
-  background-color: #ffffff;
-}
-.recalls:nth-child(even) {
-  background-color: rgba(229, 226, 226, 0.27);
-}
-.reason {
-  padding: 10px;
-}
-/*product info*/
-.prod-info {
-  font-size: 14px;
-}
-/* side effects */
-#adverse-events {
-  width: 50%;
-  margin-bottom: 20px;
-}
-#adverse-events ul {
-  width: 50%;
-  margin-left: 0px;
-}
-#adverse-events li {
-  white-space: nowrap;
-  display: inline;
-  margin-left: 20px;
-  font-size: 12px;
-}
-#adverse-events li:not(:first-child) {
-  margin-right: 1em;
-}
-#adverse-events li:first-child {
-  margin-right: 0.5em;
-  margin-left: 0px;
-}
-span.bullet {
-  font-size: 10px;
-  color: #b81e30;
-  padding-right: 18px;
-}
-/*show and hide in description*/
-.hide {
-  display: none;
-}
-.more {
-  font-size: 13px;
-  padding: 3px;
-  cursor: pointer;
-}
-/*add product modal*/
-.form-btns {
-  float: right;
-}
-.dashboard-link {
-  float: right;
-  font-size: 14px;
-}
-/*Warnings Section*/
-.warnings {
-  overflow-y: auto;
-  height: 60px;
-  margin-bottom: 20px;
-}
-/*Nav toggle*/
-.nav-tabs {
-  border-bottom: 1px solid #002143;
-}
-.nav-tabs > li {
-  margin-bottom: 7px;
-}
-.nav-tabs > li.active > a.details {
-  width: 102px;
-  height: 33px;
-  background-image: url("DetailsTab_Live.png");
-}
-.nav-tabs > li > a.details {
-  width: 102px;
-  height: 33px;
-  background-image: url("DetailsTab.png");
-}
-.nav-tabs > li.active > a.charts {
-  width: 102px;
-  height: 33px;
-  background-image: url("ChartsTab_Live.png");
-}
-.nav-tabs > li > a.charts {
-  width: 102px;
-  height: 33px;
-  background-image: url("ChartsTab.png");
-}
-.nav {
-  /* Safari 5.1 to 6.0 */
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 80%, #002143, #154064);
-  /* Opera 11.1 to 12.0 */
-  background: -o-linear-gradient(rgba(255, 255, 255, 0) 80%, #002143, #154064);
-  /* Firefox 3.6 to 15 */
-  background: -moz-linear-gradient(rgba(255, 255, 255, 0) 80%, #002143, #154064);
-  /* Standard syntax */
-  background: linear-gradient(rgba(255, 255, 255, 0) 80%, #002143, #154064);
-}
-.select2-container .select2-selection--single {
-  height: 34px;
-}
+.add-product{color:grey;font-size:14px}.inline{display:inline}.main-header{margin-top:20px;margin-bottom:30px}.first-row{margin-top:20px}.logo{height:75px}.recalls{border-radius:0;min-height:400px;border:1px solid lightgrey;height:auto;max-height:100%;overflow-y:scroll;width:100%;padding:0}.enforment-reports{margin:20px;height:60vh}.recall-div{margin-top:20px;max-height:500px}.recall-head{color:white;text-align:center;width:100%;height:30px;background-color:#154064;background-image:-webkit-linear-gradient(top,#154064,#002143);background-image:-moz-linear-gradient(top,#154064,#002143);background-image:-o-linear-gradient(top,#154064,#002143);background-image:-ms-linear-gradient(top,#154064,#002143);background-image:linear-gradient(top,#154064,#002143);padding-top:6px;padding-bottom:25px;font-size:15px}.reason:nth-child(odd){background-color:#fff}.recalls:nth-child(even){background-color:rgba(229,226,226,0.27)}.reason{padding:10px}.prod-info{font-size:14px}#adverse-events{width:50%;margin-bottom:20px}#adverse-events ul{width:50%;margin-left:0}#adverse-events li{white-space:nowrap;display:inline;margin-left:20px;font-size:12px}#adverse-events li:not(:first-child){margin-right:1em}#adverse-events li:first-child{margin-right:.5em;margin-left:0}span.bullet{font-size:10px;color:#b81e30;padding-right:18px}.hide{display:none}.more{font-size:13px;padding:3px;cursor:pointer}.form-btns{float:right}.dashboard-link{float:right;font-size:14px}.warnings{overflow-y:auto;height:100px;margin-bottom:20px}.nav-tabs{border-bottom:1px solid #002143}.nav-tabs>li{margin-bottom:7px}.nav-tabs>li.active>a.details{width:102px;height:33px;background-image:url("DetailsTab_Live.png")}.nav-tabs>li>a.details{width:102px;height:33px;background-image:url("DetailsTab.png")}.nav-tabs>li.active>a.charts{width:102px;height:33px;background-image:url("ChartsTab_Live.png")}.nav-tabs>li>a.charts{width:102px;height:33px;background-image:url("ChartsTab.png")}.nav{background:-webkit-linear-gradient(rgba(255,255,255,0) 80%,#002143,#154064);background:-o-linear-gradient(rgba(255,255,255,0) 80%,#002143,#154064);background:-moz-linear-gradient(rgba(255,255,255,0) 80%,#002143,#154064);background:linear-gradient(rgba(255,255,255,0) 80%,#002143,#154064)}.select2-container .select2-selection--single{height:34px}
